# REFLECT_Group_Project

./: .gitignore  ClosedVocabComparison.html  ClosedVocabComparison.ipynb  Justfile  README.md  Stakeholder_ClosedVocab_Justification.html  Stakeholder_ClosedVocab_Justification.ipynb  Stakeholder_ClosedVocab_Justification.pptx  build_closed_vocab_notebook.py  build_stakeholder_notebook.py  closed_vocab_eval.py  depth_scene_grahp.py  depth_scene_graph.py  execute_stakeholder_notebook.py  main.py  pipeline_depth.py  pyproject.toml  stakeholder_eval.py  tasks_real_exec_failures.json  validation.jsonl
.github/: settings.yml
ObjectDetection_Open_Close_Set/: Object Detection Markdowns.docx  Requirements.txt  extract_video.py  sim_results_boilwater.json
Poster/: REFLECT Perception Module - Poster (standalone).html
code/: README.md  align.py  analyze.py  debug_gdino.py  demo_track.py  depth_video.py  detector.py  encode.py  frame_provider.py  gui.py  inspect_data.py  owl_detect.py  reflect_adapter.py  reid.py  sanity_check.py  scene_graph.py  test_reid_video.py  track.py  tracker.py  tracking_log.py  validator.py  visualize.py  visualize_track.py
code/benchmark/: config.yaml  harness.py  harness_multi.py  metrics.py
code/gui/: config.py  data.py  localization.py  logger.py  models.py  plots.py  ui.py
code/interfaces/: IDepthExtraction.py  IDetection.py  IDetectionTrackingPipeline.py  IFrameInput.py  ISceneGraphBuilder.py  ISceneGraphSummarizer.py  ITracking.py  ITrackingValidator.py  __init__.py
code/pages/: pipeline_viewer.py  summary.py
dashboard/: README.md  dashboard.py  extract_frames.py  frame_viewer.py  interactive.py  llm.py  loaders.py  metrics.py  plots.py  requirements.txt  utils.py
demo/live-scene-graph/: .gitignore  README.md  pyproject.toml
demo/live-scene-graph/scripts/: make_test_clip.py
demo/live-scene-graph/src/livescene/: __init__.py  app.py  config.py  depth.py  detector.py  device.py  intrinsics.py  pipeline.py  prompts.py  render.py  synthetic.py
demo/live-scene-graph/src/livescene/scene_graph/: __init__.py  builder.py  models.py
demo/live-scene-graph/tests/: fixtures.py  test_depth_smoke.py  test_detector_smoke.py  test_intrinsics.py  test_pipeline_headless.py  test_relations.py  test_render.py
docs/: Research Plan.docx  gui_explainer.md  project_plan.docx  ~$oject_plan.docx
example_data/: tasks_real_world.json
git_export_pipeline/: APPLE IN FRIDGE 1.xlsx  Experiment.docx  README.md  build_sim_artifacts.py  extract_video.py
notebooks/: RGBD_GroundingDINO_SceneGraph_Baseline.ipynb  eval_pipeline.ipynb  exploration.ipynb
pipeline/: .gitignore  annotate_eef.py  build_scene_graphs.py  main.py  pyproject.toml  reflect_adapter.py  run_pipeline.py  sam2_tracker.py  scene_graph_builder.py  validator.py  yoloe_tracker.py
pipeline/annotations/: T_cam_robot.npy  annotate_eef.py
pipeline/data_loader/: rgbd_loader.py  task_loader.py  workspace.py
pipeline/depth/: pipeline_depth.py
pipeline/detector/: GroundingDinoDetector.py  LocateAnythingDetector.py  locateanything.py  locateanything_strategy.py  prompt_strategy.py  runner.py
pipeline/interfaces/: IDepthExtraction.py  IDetection.py  ISceneGraphBuilder.py  ITrackingValidator.py
pipeline/models/: __init__.py  base.py  depth.py  detection.py  scene_graph.py  tracking.py
pipeline/real_world/: tasks_real_world.json
pipeline/real_world/state_summary/: detection.json
pipeline/scene_graph/: build_scene_graphs.py  scene_graph_builder.py  visualize_scene_graph.py
pipeline/scripts/: notebook_helpers.py
pipeline/src/: main.py
pipeline/src/data_loader/: rgbd_loader.py  task_loader.py  workspace.py
pipeline/src/detector/: GroundingDinoDetector.py  runner.py
pipeline/src/interfaces/: IDetectionTrackingPipeline.py  ITracking.py  ITrackingValidator.py  Interfaces.py
pipeline/src/reflect_pipeline/: __init__.py  main.py  run_pipeline.py
pipeline/src/reflect_pipeline/annotations/: annotate_eef.py  eef_annotations.json
pipeline/src/reflect_pipeline/data_loader/: rgbd_loader.py
pipeline/src/reflect_pipeline/detector/: GroundingDinoDetector.py  locateanything.py  locateanything_strategy.py  prompt_strategy.py  runner.py
pipeline/src/reflect_pipeline/interfaces/: IDepthExtraction.py  IDetection.py  IDetectionTrackingPipeline.py  ISceneGraphBuilder.py  ITracking.py  ITrackingValidator.py
pipeline/src/reflect_pipeline/models/: scene_graph.py
pipeline/src/reflect_pipeline/scene_graph/: scene_graph_builder.py
pipeline/src/reflect_pipeline/scripts/: notebook_helpers.py
pipeline/src/reflect_pipeline/tracker/: sam2_tracker.py  sam2_tracker_redetect.py  validator.py  yoloe_tracker.py  yoloe_tracker2.py
pipeline/src/scripts/: notebook_helpers.py
pipeline/tests/: test_scene_graph_builder.py
pipeline/tracker/: reid.py  sam2_tracker_redetect.py  validator.py  yoloe_tracker.py  yoloe_tracker2.py
real-world-code/: constants.py  dinosam_object_detector.py  hubconf.py  mdetr_object_detector.py  real_world_get_local_sg.py  real_world_hierarchical_prompt.py  real_world_scene_graph.py  real_world_utils.py  robofail_scene_graph_pipeline.ipynb  robofail_scene_graph_pipeline.py  robofail_video_loader.py  scene_graph_pipeline(1).ipynb  scene_graph_pipeline.ipynb  test.ipynb  transforms.py
tests/: test_validator.py
(+1593 files in other folders)
