[tool.poetry]
package-mode = false

[project]
name = "eai-group-project"
version = "0.1.0"
description = "Multimodal alignment pipeline for RoboFail/REFLECT dataset"
authors = [
    {name = "Tim Rutjens",email = "tim.rutjens@ict.nl"}
]
requires-python = ">=3.11"
dependencies = [
    "opencv-python (>=4.13.0.92,<5.0.0.0)",
    "librosa (>=0.11.0,<0.12.0)",
    "moviepy (>=2.2.1,<3.0.0)",
    "tqdm (>=4.67.3,<5.0.0)",
    "zarr (>=3.1.5,<4.0.0)",
    "numpy (>=2.4.3,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "wav2clip (>=0.1.0,<0.2.0)",
    "openai-clip (>=1.0.1,<2.0.0)",
    "setuptools (<75)",
    "streamlit (>=1.55.0,<2.0.0)",
    "transformers (>=5.3.0,<6.0.0)",
    "nltk (>=3.9.3,<4.0.0)",
    "ai2thor (>=5.0.0,<6.0.0)",
    "Pillow (>=10.0.0)",
    "scipy (>=1.13.0)",
    "sentencepiece (>=0.2.1,<0.3.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = ["notebooks/", "*.md"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "C90"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[dependency-groups]
dev = [
    "ruff (>=0.15.6,<0.16.0)"
]
