[project]
name = "reflect-group-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "librosa>=0.11.0",
    "matplotlib>=3.10.8",
    "moviepy>=2.2.1",
    "nltk>=3.9.3",
    "numpy>=2.4.3",
    "openai-clip>=1.0.1",
    "opencv-python>=4.13.0.92",
    "setuptools<75",
    "streamlit>=1.55.0",
    "torch==2.10.0",
    "torchaudio==2.10.0",
    "torchvision==0.25.0",
    "tdqm>=0.0.1",
    "transformers>=5.3.0",
    "wav2clip>=0.1.0",
    "zarr>=3.1.6",
    "termcolor>=3.3.0",
    "ignite>=1.1.0",
    "pytorch-ignite>=0.5.4",
    "visdom==0.1.8.9",
    "scikit-image>=0.26.0",
    "transforms3d>=0.4.2",
    "open3d>=0.19.0",
    "sentence-transformers>=5.4.0",
    "imagecodecs>=2026.3.6",
    "openai>=2.31.0",
    "timm==0.4.12",
]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.extra-build-dependencies]
visdom = ["setuptools"]
