[project]
name = "pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "imagecodecs>=2026.3.6",
    "numpy>=2.4.5",
    "opencv-python>=4.13.0.92",
    "pillow>=12.2.0",
    "scikit-learn>=1.8.0",
    "tdqm>=0.0.1",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "transformers>=5.8.1",
    "zarr>=3.1.6",
]
